Reduce code and improve styling of `RegisterView`

--- a/dl4se-website/src/assets/styles/view/_form-page.sass
+++ b/dl4se-website/src/assets/styles/view/_form-page.sass
@@ -7,8 +7,15 @@ form
   input
     width: $width!important
 
-  .form-text
+  .bi
+    margin: 3px 0!important
+
+  .form-text,
+  .invalid-feedback
     width: $width!important
+    display: flex!important
+    flex-direction: row!important
+    gap: 5px!important
 
   .form-row
     justify-content: center!important
