Lower opacity for disabled form control elements

--- a/dl4se-website/src/assets/styles/override/_form.sass
+++ b/dl4se-website/src/assets/styles/override/_form.sass
@@ -8,4 +8,8 @@ form
     border-radius: 0!important
     border-width: 0 0 1px 0!important
 
+  .form-control:disabled,
+  .form-control.disabled
+    opacity: 0.65!important
+
   @include btn-accent("button[type=submit]")
