Update scrollbar CSS

--- a/dl4se-website/src/assets/styles/override/_scroll.sass
+++ b/dl4se-website/src/assets/styles/override/_scroll.sass
@@ -1,12 +1,12 @@
 ::-webkit-scrollbar
-  @include fixed-width(10)
-  @include fixed-height(10)
+  height: 10px!important
+  width: 10px!important
 
 ::-webkit-scrollbar-track
-  background: $light-gray
+  background: $light
 
 ::-webkit-scrollbar-corner
-  background: $light-gray
+  background: $light
 
 ::-webkit-scrollbar-thumb
   background: $gray-600
