Change background color when focusing form elements

--- a/dl4se-website/src/assets/styles/override/_form.sass
+++ b/dl4se-website/src/assets/styles/override/_form.sass
@@ -8,6 +8,9 @@ form
     border-radius: 0!important
     border-width: 0 0 1px 0!important
 
+    &:focus
+      background-color: $white!important
+
   .form-control:disabled,
   .form-control.disabled
     opacity: 0.65!important
