--- a/dl4se-website/src/assets/styles/extension/_zindex.sass
+++ b/dl4se-website/src/assets/styles/extension/_zindex.sass
@@ -1,3 +1,3 @@
-@for $position from 0 to 10
-  .z-index-#{$position}
-    z-index: $position+!important
+@for $position from 0 to 5
+  .z-#{$position}
+    z-index: $position!important
