Address deprecation warning

--- a/dl4se-website/src/assets/styles/component/counter.sass
+++ b/dl4se-website/src/assets/styles/component/counter.sass
@@ -11,8 +11,8 @@ input
 
 .btn
   @include button-variant($gray-200, $gray-600, $gray-600, $gray-600, $gray-700)
-  width: $input-height / 2!important
-  height: $input-height / 2!important
+  width: calc($input-height / 2)!important
+  height: calc($input-height / 2)!important
   border-radius: 0!important
   background-repeat: no-repeat!important
   background-position: center!important
