Improve dropdown item override CSS

--- a/dl4se-website/src/assets/styles/override/_dropdown.sass
+++ b/dl4se-website/src/assets/styles/override/_dropdown.sass
@@ -1,6 +1,8 @@
 .dropdown-menu
   border-radius: 0!important
 
-.dropdown-item:active, .dropdown-item.active
-  color: $white
-  background-color: $normal-gray
+.dropdown-item
+  &:active,
+  &.active
+    color: $white
+    background-color: $gray-600
