Update default progress bar styling

--- a/dl4se-website/src/assets/styles/override/_progress.sass
+++ b/dl4se-website/src/assets/styles/override/_progress.sass
@@ -1,3 +1,4 @@
 .progress
-  border-radius: 0
-  border: 1px solid #6c757d
+  border-radius: 0!important
+  border: 1px solid $gray-600!important
+  background-color: $gray-100!important
