--- a/dl4se-website/src/assets/styles/override/_pagination.sass
+++ b/dl4se-website/src/assets/styles/override/_pagination.sass
@@ -4,7 +4,7 @@
 .page-item .page-link
   min-width: 40px!important
   min-height: 40px!important
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out
+  @include color-transition
   @extend .border-secondary
   @extend .border-left-0
   @extend .border-top-0
