--- a/dl4se-website/src/assets/styles/override/_table.sass
+++ b/dl4se-website/src/assets/styles/override/_table.sass
@@ -1,9 +1,9 @@
 .table-hover tbody tr
   color: $black
-  background-color: $light-gray
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out
+  background-color: $gray-200
+  @include color-transition
 
 .table-hover tbody tr:hover
   color: $white
-  background-color: $normal-gray
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out
+  background-color: $gray-600
+  @include color-transition
