Introduce a mixin for box shadows

--- a/dl4se-website/src/assets/styles/override/_input.sass
+++ b/dl4se-website/src/assets/styles/override/_input.sass
@@ -7,4 +7,4 @@ input[type=number]
   -moz-appearance: textfield!important
 
 input:focus, .form-control:focus
-  box-shadow: 0 0 0 0.2rem transparentize($gray-600, 0.5)!important
+  @include box-shadow
