--- a/dl4se-website/src/assets/styles/override/_validation.sass
+++ b/dl4se-website/src/assets/styles/override/_validation.sass
@@ -5,7 +5,7 @@ $dark-red: darken($danger, 15%)
 .form-control.is-invalid:focus,
 .was-validated .form-control:valid:focus,
 .was-validated .form-control:invalid:focus
-  box-shadow: 0 0 0 0.2rem transparentize($gray-600, 0.5)!important
+  @include box-shadow
 
 .form-control.is-valid,
 .form-control.is-invalid,
