--- a/dl4se-website/src/assets/styles/override/_custom-control-input.sass
+++ b/dl4se-website/src/assets/styles/override/_custom-control-input.sass
@@ -10,7 +10,7 @@
 
 .custom-control-input:focus ~ .custom-control-label::before
   border-color: $gray-600!important
-  box-shadow: 0 0 0 0.2rem transparentize($gray-600, 0.5)!important
+  @include box-shadow
 
 .custom-control-input:checked ~ .custom-control-label::before
   border-color: $gray-600!important
