--- a/dl4se-website/src/assets/styles/override/_pagination.sass
+++ b/dl4se-website/src/assets/styles/override/_pagination.sass
@@ -1,5 +1,5 @@
 .page-link:focus
-  box-shadow: 0 0 0 0.2rem transparentize($gray-600, 0.5)!important
+  @include box-shadow
 
 .page-item .page-link
   min-width: 40px!important
