--- a/dl4se-website/src/assets/styles/override/_input.sass
+++ b/dl4se-website/src/assets/styles/override/_input.sass
@@ -7,4 +7,4 @@ input[type=number]
   -moz-appearance: textfield!important
 
 input:focus, .form-control:focus
-  @include box-shadow
+  @include shadowed
