--- a/dl4se-website/src/assets/styles/_override.sass
+++ b/dl4se-website/src/assets/styles/_override.sass
@@ -1,4 +1,5 @@
 @import "override/anchor"
+@import "override/confirm-modal"
 @import "override/custom-control-input"
 @import "override/disabled"
 @import "override/dropdown"
