Introduce custom component `TextCarouselSlide`
Simplifies the `TextCarousel` component

--- a/dl4se-website/src/assets/styles/view/home.sass
+++ b/dl4se-website/src/assets/styles/view/home.sass
@@ -27,3 +27,8 @@ section
 
 .tagline
   font-size: clamp(1rem, 4.25vw, 1.5rem)!important
+
+.carousel
+  ::v-deep
+    .card-title
+      text-align: center!important
