Minor CSS cleanup for `ContentArea`

--- a/dl4se-website/src/assets/styles/component/content-area.sass
+++ b/dl4se-website/src/assets/styles/component/content-area.sass
@@ -5,4 +5,4 @@
   margin: 0!important
   padding: map-get($spacers, 4)!important
   border-radius: 0!important
-  border-bottom: 1px solid gray("600")!important
+  border-bottom: 1px solid $gray-600!important
