--- a/dl4se-website/src/assets/styles/component/paginated-table.sass
+++ b/dl4se-website/src/assets/styles/component/paginated-table.sass
@@ -47,10 +47,7 @@ $button-size: 40px
       height: $empty-height!important
 
 .table-container
-  border: 1px solid $gray-600!important
-  border-left: 0!important
-  border-top: 0!important
-  border-right: 0!important
+  border-bottom: 1px solid $gray-600!important
 
 .pagination
   ::v-deep
