Promote certain table CSS to the global scope

--- a/dl4se-website/src/assets/styles/override/_table.sass
+++ b/dl4se-website/src/assets/styles/override/_table.sass
@@ -1,3 +1,20 @@
+th, td
+  vertical-align: middle!important
+
+thead tr
+  height: 50px!important
+
+tbody tr
+  height: 64px!important
+
+.b-table-empty-row
+  color: $black
+  background-color: $gray-200
+  height: 319px!important
+
+.table-container
+  border-bottom: 1px solid $gray-600!important
+
 .table-hover tbody tr
   color: $black
   background-color: $gray-200
