Override default link styling
Changes default link theme to secondary and disables text decoration.
This completely circumnavigates the need for certain classes in code.

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -1,3 +1,9 @@
+@import "node_modules/bootstrap/scss/_functions.scss"
+@import "node_modules/bootstrap/scss/_variables.scss"
+
+$link-color: theme-color("secondary")
+$link-hover-color: darken($link-color, 15%)
+$link-hover-decoration: none
 $enable-responsive-font-sizes: true
 
 @import "node_modules/bootstrap/scss/bootstrap"
