Use appropriate Bootstrap variable for color transitions

--- a/dl4se-website/src/assets/styles/component/paginated-table.sass
+++ b/dl4se-website/src/assets/styles/component/paginated-table.sass
@@ -45,7 +45,7 @@ $button-size: 40px
         border-left: 0!important
         border-top: 0!important
         border-right: 0!important
-        @include color-transition
+        transition: $btn-transition
       &.active
         .page-link
           color: $white!important
