Introduce custom transition values for the table rows

--- a/dl4se-website/src/assets/styles/override/_table.sass
+++ b/dl4se-website/src/assets/styles/override/_table.sass
@@ -18,9 +18,9 @@ tbody tr
 .table-hover tbody tr
   color: $black
   background-color: $gray-200
-  @include color-transition
+  transition: $table-transition
 
 .table-hover tbody tr:hover
   color: $white
   background-color: $gray-600
-  @include color-transition
+  transition: $table-transition
