--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -4,6 +4,7 @@
 $link-color: theme-color("secondary")
 $link-hover-color: darken($link-color, 15%)
 $link-hover-decoration: none
+$table-transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out
 $enable-responsive-font-sizes: true
 
 @import "node_modules/bootstrap/scss/bootstrap"
