Replace box shadow mixin with overridden Bootstrap variable

--- a/dl4se-website/src/assets/styles/override/_input.sass
+++ b/dl4se-website/src/assets/styles/override/_input.sass
@@ -6,5 +6,6 @@ input::-webkit-inner-spin-button
 input[type=number]
   -moz-appearance: textfield!important
 
-input:focus, .form-control:focus
-  @include shadowed
+input:focus,
+.form-control:focus
+  box-shadow: $box-shadow!important
