--- a/dl4se-website/src/assets/styles/override/_custom-control-input.sass
+++ b/dl4se-website/src/assets/styles/override/_custom-control-input.sass
@@ -10,7 +10,7 @@
 
 .custom-control-input:focus ~ .custom-control-label::before
   border-color: $gray-600!important
-  @include shadowed
+  box-shadow: $box-shadow!important
 
 .custom-control-input:checked ~ .custom-control-label::before
   border-color: $gray-600!important
