--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -1,6 +1,7 @@
 @import "node_modules/bootstrap/scss/_functions.scss"
 @import "node_modules/bootstrap/scss/_variables.scss"
 
+$hr-margin-y: 0
 $box-shadow-sm: 0 0 0 0.1rem rgba($black, .1)
 $box-shadow: 0 0 0 0.2rem rgba($black, .2)
 $box-shadow-lg: 0 0 0 0.4rem rgba($black, .4)
