--- a/dl4se-website/src/assets/styles/view/profile.sass
+++ b/dl4se-website/src/assets/styles/view/profile.sass
@@ -13,7 +13,8 @@ $card-form-input-max-width: 350px
   overflow-y: auto!important
 
 hr
-  margin-top: 0!important
+  $margin: map-get($spacers, 3)
+  margin-bottom: $margin!important
 
 form
   .bi
