--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -3,6 +3,9 @@
 
 $hr-margin-y: 0
 $toast-border-radius: 0
+$tooltip-max-width: 350px
+$tooltip-border-radius: 0
+$tooltip-opacity: 1
 $box-shadow-sm: 0 0 0 0.1rem rgba($black, .1)
 $box-shadow: 0 0 0 0.2rem rgba($black, .2)
 $box-shadow-lg: 0 0 0 0.4rem rgba($black, .4)
