Add a `disabled-opacity` variable
Currently unused

--- a/dl4se-website/src/assets/styles/style.sass
+++ b/dl4se-website/src/assets/styles/style.sass
@@ -1,6 +1,7 @@
 @import "node_modules/bootstrap/scss/_functions.scss"
 @import "node_modules/bootstrap/scss/_variables.scss"
 
+$disabled-opacity: .65
 $hr-margin-y: 0
 $toast-border-radius: 0
 $tooltip-max-width: 350px
