--- a/dl4se-website/src/assets/styles/component/dropdown-select.sass
+++ b/dl4se-website/src/assets/styles/component/dropdown-select.sass
@@ -1,7 +1,7 @@
 @import "node_modules/bootstrap/scss/_functions.scss"
 @import "node_modules/bootstrap/scss/_variables.scss"
 @import "node_modules/bootstrap/scss/_mixins.scss"
-@import "@/assets/styles/_svg.sass"
+@import "@/assets/styles/_mixins.sass"
 
 $toggle-height: 40px
 
