Extract variables into their own file
This requires some changes as to how they are imported in the components
and views. Lots of files are affected by this.

--- a/dl4se-website/src/assets/styles/_mixins.sass
+++ b/dl4se-website/src/assets/styles/_mixins.sass
@@ -1,3 +1,5 @@
+@import "node_modules/bootstrap/scss/_mixins.scss"
+
 @mixin btn-accent($selector: ".btn")
   #{$selector}
     border-width: 2px!important
