--- a/dl4se-website/src/assets/styles/component/back-to-top.sass
+++ b/dl4se-website/src/assets/styles/component/back-to-top.sass
@@ -1,5 +1,4 @@
-@import "node_modules/bootstrap/scss/_functions.scss"
-@import "node_modules/bootstrap/scss/_variables.scss"
+@import "@/assets/styles/variables"
 
 div
   $position: map-get($spacers, 2)
