--- a/dl4se-website/src/assets/styles/component/form-submit.sass
+++ b/dl4se-website/src/assets/styles/component/form-submit.sass
@@ -1,5 +1,4 @@
-@import "node_modules/bootstrap/scss/_functions.scss"
-@import "node_modules/bootstrap/scss/_variables.scss"
-@import "@/assets/styles/_mixins.sass"
+@import "@/assets/styles/variables"
+@import "@/assets/styles/mixins"
 
 @include btn-accent
