--- a/dl4se-website/src/assets/styles/component/clearable-input.sass
+++ b/dl4se-website/src/assets/styles/component/clearable-input.sass
@@ -1,6 +1,5 @@
-@import "node_modules/bootstrap/scss/_functions.scss"
-@import "node_modules/bootstrap/scss/_variables.scss"
-@import "node_modules/bootstrap/scss/_mixins.scss"
+@import "@/assets/styles/variables"
+@import "@/assets/styles/mixins"
 
 input
   height: 40px!important
