--- a/dl4se-website/src/assets/styles/view/_text-page.sass
+++ b/dl4se-website/src/assets/styles/view/_text-page.sass
@@ -1,5 +1,4 @@
-@import "node_modules/bootstrap/scss/_functions.scss"
-@import "node_modules/bootstrap/scss/_variables.scss"
+@import "@/assets/styles/variables"
 
 article
   padding: map-get($spacers, 4)!important
