--- a/dl4se-website/src/assets/styles/view/code.sass
+++ b/dl4se-website/src/assets/styles/view/code.sass
@@ -1,5 +1,4 @@
-@import "node_modules/bootstrap/scss/_functions.scss"
-@import "node_modules/bootstrap/scss/_variables.scss"
+@import "@/assets/styles/variables"
 
 h2
   $margin: map-get($spacers, 3)
