--- a/dl4se-website/src/assets/styles/view/home.sass
+++ b/dl4se-website/src/assets/styles/view/home.sass
@@ -1,5 +1,4 @@
-@import "node_modules/bootstrap/scss/_functions.scss"
-@import "node_modules/bootstrap/scss/_variables.scss"
+@import "@/assets/styles/variables"
 
 section
   display: flex!important
