--- a/dl4se-website/src/assets/styles/view/profile.sass
+++ b/dl4se-website/src/assets/styles/view/profile.sass
@@ -1,5 +1,4 @@
-@import "node_modules/bootstrap/scss/_functions.scss"
-@import "node_modules/bootstrap/scss/_variables.scss"
+@import "@/assets/styles/variables"
 
 $card-form-input-height: 40px
 $card-form-input-max-width: 350px
