Use newly introduced opacity variable where appropriate

--- a/dl4se-website/src/assets/styles/component/paginated-table.sass
+++ b/dl4se-website/src/assets/styles/component/paginated-table.sass
@@ -50,7 +50,7 @@ $button-size: 40px
           background-color: $gray-700!important
       &.disabled
         .page-link
-          opacity: 65%!important
+          opacity: $disabled-opacity!important
       &:not(.disabled)
         .page-link:hover
           color: $white!important
