Isolate table CSS to not conflict with other tables on the site

--- a/dl4se-website/src/assets/styles/_variables.sass
+++ b/dl4se-website/src/assets/styles/_variables.sass
@@ -3,6 +3,8 @@
 
 $disabled-opacity: .65
 $hr-margin-y: 0
+$table-header-row-height: 50px
+$table-body-row-height: 64px
 $toast-border-radius: 0
 $tooltip-max-width: 350px
 $tooltip-border-radius: 0
