--- a/dl4se-website/src/assets/styles/component/paginated-table.sass
+++ b/dl4se-website/src/assets/styles/component/paginated-table.sass
@@ -29,6 +29,17 @@ $button-size: 40px
       // This is required to undo a bug that was introduced in version 2.22 of BSV:
       // https://github.com/bootstrap-vue/bootstrap-vue/issues/6961
       position: sticky!important
+    th, td
+      vertical-align: middle!important
+    tr
+      thead &
+        height: $table-header-row-height !important
+      tbody &
+        height: $table-body-row-height!important
+    .b-table-empty-row
+      color: $black!important
+      background-color: $gray-200!important
+      height: calc($table-body-row-height * 5 - 1px)!important
 
 .pagination
   ::v-deep
